Initial commit and tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,15 @@
 [project]
-name = "pytest-axe-playwright-snapshot"
-description = "A pytest plugin that runs Axe-core on Playwright pages and takes snapshots of the results."
-version = "0.0.6"
+name = "llm-messages-token-helper"
+description = "A helper library for estimating tokens used by messages."
+version = "0.0.1"
 authors = [{name = "Pamela Fox"}]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 readme = "README.md"
 license = {file = "LICENSE"}
 dependencies = [
-    "pytest",
-    "pytest-cov",
-    "playwright",
-    "axe-playwright-python",
-    "pytest-snapshot-with-message-generator"
+    "openai",
+    "tiktoken",
+    "pillow"
     ]
 classifiers = [
     "License :: OSI Approved :: MIT License",
@@ -25,39 +23,32 @@ classifiers = [
     ]
 
 [project.urls]
-Home = "https://github.com/pamelafox/pytest-axe-playwright-snapshot"
+Home = "https://github.com/pamelafox/llm-messages-token-helper"
 
 [project.optional-dependencies]
 dev = [
     "pytest",
     "pytest-cov",
-    "pytest-playwright",
     "pre-commit",
     "ruff",
     "black",
     "flit",
 ]
 
-[project.entry-points.pytest11]
-axe_playwright_snapshot = "pytest_axe_playwright_snapshot"
-
 [build-system]
 requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
-[tool.flit.module]
-name = "pytest_axe_playwright_snapshot"
-
 [tool.ruff]
 line-length = 120
-target-version = "py38"
+target-version = "py39"
 select = ["E", "F", "I", "UP"]
 ignore = ["D203", "E501"]
 show-source = true
 
 [tool.black]
 line-length = 120
-target-version = ["py38"]
+target-version = ["py39"]
 
 [tool.pytest.ini_options]
 addopts = "-ra --cov"
