--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-          python_version: ["3.8", "3.9", "3.10", "3.11"]
+          python_version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
         - uses: actions/checkout@v3
         - name: Set up Python 3
@@ -30,5 +30,4 @@ jobs:
           run: black . --check --verbose
         - name: Run unit tests
           run: |
-            playwright install --with-deps
             python3 -m pytest
