--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -13,7 +13,7 @@ jobs:
     strategy:
         fail-fast: false
         matrix:
-          python_version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+          python_version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
         - uses: actions/checkout@v3
         - name: Set up Python 3
