--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "llm-messages-token-helper"
-description = "A helper library for estimating tokens used by messages."
-version = "0.0.3"
+name = "openai-messages-token-helper"
+description = "A helper library for estimating tokens used by messages sent through OpenAI Chat Completions API."
+version = "0.0.4"
 authors = [{name = "Pamela Fox"}]
 requires-python = ">=3.9"
 readme = "README.md"
@@ -15,7 +15,6 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -23,7 +22,7 @@ classifiers = [
     ]
 
 [project.urls]
-Home = "https://github.com/pamelafox/llm-messages-token-helper"
+Home = "https://github.com/pamelafox/openai-messages-token-helper"
 
 [project.optional-dependencies]
 dev = [
