--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,12 @@
         "tests"
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "files.exclude": {
+        ".coverage": true,
+        ".pytest_cache": true,
+        "__pycache__": true,
+        ".ruff_cache": true,
+        ".mypy_cache": true,
+    }
 }
