--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -25,7 +25,7 @@ jobs:
             python -m pip install --upgrade pip
             python3 -m pip install -e '.[dev]'
         - name: Lint with ruff
-          run: ruff .
+          run: ruff check .
         - name: Check formatting with black
           run: black . --check --verbose
         - name: Run unit tests
