--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -22,7 +22,7 @@ jobs:
             python-version: ${{ matrix.python_version }}
         - name: Install dependencies
           run: |
-            python -m pip install --upgrade pip
+            python3 -m pip install --upgrade pip
             python3 -m pip install -e '.[dev]'
         - name: Lint with ruff
           run: ruff check .
@@ -32,4 +32,4 @@ jobs:
           run: |
             python3 -m pytest -s -vv --cov --cov-fail-under=97
         - name: Run type checks
-          run: mypy .
+          run: python3 -m mypy .
