Handle empty PR bodies

--- a/.github/workflows/pr-body-reader.yml
+++ b/.github/workflows/pr-body-reader.yml
@@ -26,16 +26,50 @@ jobs:
           echo "Body:"
           echo "-----"
           printf '%s\n' "$PR_BODY"
+
+      - name: Check for empty PR description
+        id: bodycheck
+        env:
+          PR_BODY: ${{ github.event.pull_request.body }}
+        run: |
+          # Trim whitespace and detect emptiness
+          trimmed=$(printf '%s' "$PR_BODY" | awk '{$1=$1};1')
+          if [ -z "$trimmed" ]; then
+            echo "needs_description=true" >> "$GITHUB_OUTPUT"
+          else
+            echo "needs_description=false" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Ask for PR description
+        if: steps.bodycheck.outputs.needs_description == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const number = context.payload.pull_request.number;
+            const body = `👋 Thanks for the PR! Please add a description with context and a brief test plan so reviewers can understand the change.`;
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: number,
+              body,
+            });
+
       - name: Setup Python
+        if: steps.bodycheck.outputs.needs_description == 'false'
         id: installpython
         uses: actions/setup-python@v5
         with:
           python-version: "3.13"
+
       - name: Install LLM with GitHub Models
+        if: steps.bodycheck.outputs.needs_description == 'false'
         run: |
           python -m pip install --upgrade pip
           python -m pip install llm llm-github-models
+
       - name: Generate LLM review
+        if: steps.bodycheck.outputs.needs_description == 'false'
         id: review
         env:
           PR_BODY: ${{ github.event.pull_request.body }}
@@ -46,15 +80,15 @@ jobs:
           You are a helpful reviewer. Assess whether the PR description is complete, clear, and includes a test plan. If missing, suggest concrete improvements.
           EOF
           )
-          # Run the model; capture multiline output safely
           review_out=$(llm prompt -m github/gpt-4o-mini --system "$prompt" "$PR_BODY")
-          # Save to GITHUB_OUTPUT, preserving newlines
           {
             echo 'text<<REVIEW'
             printf '%s\n' "$review_out"
             echo 'REVIEW'
           } >> "$GITHUB_OUTPUT"
+
       - name: Comment review on PR
+        if: steps.bodycheck.outputs.needs_description == 'false'
         uses: actions/github-script@v7
         env:
           REVIEW: ${{ steps.review.outputs.text }}
